--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/87a0f40513.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>cssBayan</title>
   </head>
@@ -20,8 +30,10 @@
             name="radio"
           />
           <label class="label" for="acor1" name="radio"
-            >Lorem ipsum dolor sit amet.</label
-          >
+            ><span class="spanflex">sldl;dsf;ls;df;,sdf,; </span>
+          </label>
+          <label class="label plus" for="acor1" name="radio">+ </label>
+          <span class="minus">-</span>
 
           <div class="text">
             <img class="meme_img" src="./img/meme1.jpg" alt="meme_1" />
@@ -30,9 +42,10 @@
         <div class="accordion__item">
           <input class="input" type="radio" id="acor2" name="radio" />
           <label class="label" for="acor2" name="radio"
-            >Lorem ipsum dolor sit amet.</label
-          >
-
+            ><span class="spanflex">sldl;dsf;ls;df;,sdf,; </span>
+          </label>
+          <label class="label plus" for="acor2" name="radio">+ </label>
+          <span class="minus">-</span>
           <div class="text">
             <img class="meme_img" src="./img/meme2.jpg" alt="meme_2" />
           </div>
@@ -40,8 +53,10 @@
         <div class="accordion__item">
           <input class="input" type="radio" id="input-3" name="radio" />
           <label class="label" for="input-3" name="radio"
-            >Lorem ipsum dolor sit amet.</label
-          >
+            ><span class="spanflex">sldl;dsf;ls;df;,sdf,; </span>
+          </label>
+          <label class="label plus" for="input-3" name="radio">+ </label>
+          <span class="minus">-</span>
 
           <div class="text">
             <img class="meme_img" src="./img/meme3.jpg" alt="meme_3" />
@@ -50,17 +65,22 @@
         <div class="accordion__item">
           <input class="input" type="radio" id="input-4" name="radio" />
           <label class="label" for="input-4" name="radio"
-            >Lorem ipsum dolor sit amet.</label
-          >
+            ><span class="spanflex">sldl;dsf;ls;df;,sdf,; </span>
+          </label>
+          <label class="label plus" for="input-4" name="radio">+ </label>
+          <span class="minus">-</span>
+
           <div class="text">
             <img class="meme_img" src="./img/meme4.jpg" alt="meme_4" />
           </div>
         </div>
         <div class="accordion__item">
           <input class="input" type="radio" id="input-5" name="radio" />
-          <label class="label" for="input-5" name="radio"
-            >Lorem ipsum dolor sit amet.</label
-          >
+          <label class="label" for="input-5" name="radio">
+            <span class="spanflex">sldl;dsf;ls;df;,sdf,; </span>
+          </label>
+          <label class="label plus" for="input-5" name="radio">+ </label>
+          <span class="minus">-</span>
           <div class="text">
             <img class="meme_img" src="./img/meme5.jpg" alt="meme_5" />
           </div>
